4-kubernetes/node-exporter-service.yaml
#type: NodePort namespace: monitoring
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: node-exporter
  ports:
    - port: 9100
      targetPort: 9100
      nodePort: 30090
